fixed vertical align by adding height to wrapper element.

--- a/css/views_table_contextual_links_fix.css
+++ b/css/views_table_contextual_links_fix.css
@@ -10,6 +10,6 @@
   word-wrap: break-word;
 }
 
-.islandora-batch-view-table td.views-field-actions {
-  vertical-align: top;
+td.views-field-actions .ctools-dropbutton-wrapper {
+  height: 20px;
 }
